--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,8 +10,12 @@
 		// The path to the directory containing the `index.html` file to be served at `/`
 		"directory": "./public"
 	},
+  "placement": {
+    "mode": "smart"
+  },
 	"observability": {
-		"enabled": true
+		"enabled": true,
+        "head_sampling_rate": 1
 	}
 	/**
 	 * Smart Placement
