--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -3,20 +3,17 @@
  * https://developers.cloudflare.com/workers/wrangler/configuration/
  */
 {
-	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "sandbox",
-	"compatibility_date": "2025-08-20",
-	"assets": {
-		// The path to the directory containing the `index.html` file to be served at `/`
-		"directory": "./public"
-	},
-  "placement": {
-    "mode": "smart"
-  },
-	"observability": {
-		"enabled": true,
+    "$schema": "node_modules/wrangler/config-schema.json",
+    "name": "sandbox",
+    "compatibility_date": "2025-08-20",
+    "main": "src/index.js",
+    "placement": {
+        "mode": "smart"
+    },
+    "observability": {
+        "enabled": true,
         "head_sampling_rate": 1
-	}
+    }
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
