--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,7 @@
 /**
- * For more details on how to configure Wrangler, refer to:
- * https://developers.cloudflare.com/workers/wrangler/configuration/
- */
+* For more details on how to configure Wrangler, refer to:
+* https://developers.cloudflare.com/workers/wrangler/configuration/
+*/
 {
     "$schema": "node_modules/wrangler/config-schema.json",
     "name": "sandbox",
@@ -13,7 +13,16 @@
     "observability": {
         "enabled": true,
         "head_sampling_rate": 1
-    }
+    },
+    {
+    "kv_namespaces": [
+        {
+            "binding": "MY_KV",
+            "id": "0ac9b5f096ff4c859a2c154a316778e1",
+            "preview_id": "26ecf2ccf69b420cb1e4fda2791a223a"
+        }
+    ]
+}
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
