--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,7 +8,7 @@
     "compatibility_date": "2025-08-20",
     "routes": [
         {
-            "pattern": "shop.example.com",
+            "pattern": "sworkers-sandbox.martinelli.dev",
             "custom_domain": true
         }
     ],
