--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,7 +8,7 @@
     "compatibility_date": "2025-08-20",
     "routes": [
         {
-            "pattern": "sworkers-sandbox.martinelli.dev",
+            "pattern": "workers-sandbox.martinelli.dev",
             "custom_domain": true
         }
     ],
@@ -20,6 +20,8 @@
         "enabled": true,
         "head_sampling_rate": 1
     },
+    "send_metrics":true,
+    "preview_urls": false,
     "kv_namespaces": [
         {
             "binding": "MY_KV",
